fix: tags button text-alignment on mobile

--- a/resources/assets/css/_buttons.css
+++ b/resources/assets/css/_buttons.css
@@ -13,6 +13,7 @@
 .button-tag {
     @apply button-secondary;
     @apply py-0.5 px-3 !important;
+    @apply text-left !important;
 }
 
 .button-outline {
